--- a/src/app/pages/historiales-medicos/index/index.component.html
+++ b/src/app/pages/historiales-medicos/index/index.component.html
@@ -2,22 +2,22 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header text-secondary border-0">
-            <h3 class="card-title text-center">Todos los historiales médicos</h3>
-            <div class="card-tools">
-                <!-- <a class="btn btn-tool btn-sm">
-                <i class="fas fa-download"></i>
-                </a> -->
-            </div>
+                <h3 class="card-title text-center">Todos los historiales médicos</h3>
+                <div class="card-tools">
+                    <!-- <a class="btn btn-tool btn-sm">
+                    <i class="fas fa-download"></i>
+                    </a> -->
+                </div>
             </div>
             <div class="card-header border-0">
                 <div class="row">
                     <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
-                        <div class="input-group my-2">
+                        <!-- <div class="input-group my-2">
                             <div class="input-group-prepend">
                               <div class="input-group-text"><i class="fas fa-search"></i></div>
                             </div>
                             <input [(ngModel)]="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del paciente" (keyup)="buscarPaciente()">
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
                         <a class="btn btn-sm btn-pink btn-block  my-2" routerLink="/enfermeria/historiales-medicos/create"><i class="fas fa-plus"></i> Dar alta</a>
