--- a/src/app/pages/insumos-medicos/create/create.component.html
+++ b/src/app/pages/insumos-medicos/create/create.component.html
@@ -1,1 +1,61 @@
-<p>create works!</p>
+<div class="content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header text-secondary border-0">
+                <h3 class="card-title text-center">Crear insumo médico</h3>
+            </div>
+            <div class="card-body">
+                <form [formGroup]="insumosMedicosForm" (submit)="guardar()">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="form-group">
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" id="imagen" required (change)="imagenSeleccionada($event)">
+                                    <label class="custom-file-label">Fotografía</label>
+                                </div>
+                            </div>
+                            <div class="pb-3">
+                                <ng-container *ngIf="url; else defaultImage">
+                                    <img *ngIf="url" [src]="url" alt="Imagen seleccionada" class="img-thumbnail mx-auto d-block">
+                                </ng-container>
+                                <ng-template #defaultImage>
+                                    <img src="/assets/dist/img/image.jpg" alt="Imagen seleccionada" class="img-thumbnail mx-auto d-block">
+                                </ng-template>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="row">
+                                <div class="form-group col">
+                                    <label>Nombre</label>
+                                    <input type="text" class="form-control" id="nombre" formControlName="nombre">
+                                </div>
+                                <div class="form-group col">
+                                    <label>Piezas por lote</label>
+                                    <input type="number" class="form-control" id="piezasPorLote" formControlName="piezasPorLote">
+                                </div>
+                                <div class="form-group col">
+                                    <label>Precio</label>
+                                    <div class="input-group mb-3">
+                                        <input type="number" class="form-control" id="precio" formControlName="precio">
+                                        <div class="input-group-append">
+                                          <span class="input-group-text">MXN</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <ckeditor [editor]="Editor" [config]="editorConfig" id="descripcion" formControlName="descripcion"></ckeditor>
+                                <div *ngIf="mensajesDeError.length > 0" class="text-danger pt-3">
+                                    <ul class="list-group">
+                                        <li class="list-group-item list-group-item-danger" *ngFor="let mensaje of mensajesDeError">{{ mensaje }}</li>
+                                    </ul>
+                                </div>
+                                <div class="text-center pt-3">
+                                    <button class="btn bg-pink">Guardar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
