--- a/src/app/pages/inventarios/index/index.component.html
+++ b/src/app/pages/inventarios/index/index.component.html
@@ -11,17 +11,17 @@
             </div>
             <div class="card-header border-0">
                 <div class="row">
-                    <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
-                        <!-- <div class="input-group my-2">
+                    <!-- <div class="col-xl-9 col-lg-8 col-md-8 col-sm-8">
+                        <div class="input-group my-2">
                             <div class="input-group-prepend">
                               <div class="input-group-text"><i class="fas fa-search"></i></div>
                             </div>
                             <input [(ngModel)]="search" class="form-control form-control-sm" placeholder="Ingrese el nombre del inventario" (keyup)="buscarInventario()">
-                        </div> -->
+                        </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-4">
                         <a class="btn btn-sm btn-pink btn-block  my-2" routerLink="/enfermeria/inventarios/create"><i class="fas fa-plus"></i> Nuevo inventario</a>
-                    </div>
+                    </div> -->
                 </div>   
             </div>
             <div class="card-body table-responsive p-0">
