--- a/src/app/pages/lotes-medicos/create/create.component.html
+++ b/src/app/pages/lotes-medicos/create/create.component.html
@@ -8,40 +8,44 @@
                 <form [formGroup]="lotesMedicosForm" (submit)="guardar()">
                     <div class="row">
                         <div class="form-group col-12 col-md-4">
-                            <label>Folio</label>
-                            <input type="text" class="form-control" id="folio" formControlName="folio">
+                            <label>Piezas disponibles</label>
+                            <input type="number" class="form-control" id="piezasDisponibles" formControlName="piezasDisponibles">
                         </div>
                         <div class="form-group col-6 col-md-4">
                             <label>Lote</label>
                             <input type="text" class="form-control" id="lote" formControlName="lote">
                         </div>
                         <div class="form-group col-6 col-md-4 border-left">
-                            <label>Fecha de ingreso</label>
-                            <input type="date" class="form-control" id="fechaIngreso" formControlName="fechaIngreso">
-                        </div>
-                        <div class="form-group col-12 pt-3">
-                            <label>motivo</label>
-                            <input type="text" class="form-control" id="motivo" formControlName="motivo">
-                        </div>
-                        <div class="form-group col-12">
-                            <ckeditor [editor]="Editor" [config]="editorConfig" id="detalles" formControlName="detalles"></ckeditor>
-                        </div>
-                        <div class="form-group col-12 col-md-4">
-                            <label>Piezas disponibles</label>
-                            <input type="number" class="form-control" id="piezasDisponibles" formControlName="piezasDisponibles">
-                        </div>
-                        <div class="form-group col-12 col-md-8">
                             <label>Fecha de caducidad</label>
                             <input type="date" class="form-control" id="fechaCaducidad" formControlName="fechaCaducidad">
                         </div>
-                        <div *ngIf="mensajesDeError.length > 0" class="text-danger pt-3">
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-danger" *ngFor="let mensaje of mensajesDeError">{{ mensaje }}</li>
-                            </ul>
+                    </div>
+                    <label>Entrada del lote</label>
+                    <div class="card shadow-none">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="form-group col-6 col-md-4">
+                                    <label>Folio de entrada</label>
+                                    <input type="text" class="form-control" id="folio" formControlName="folio">
+                                </div>
+                                <div class="form-group col-12 col-md-8">
+                                    <label>Motivo</label>
+                                    <input type="text" class="form-control" id="motivo" formControlName="motivo">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label>Detalles</label>
+                                    <ckeditor [editor]="Editor" [config]="editorConfig" id="detalles" formControlName="detalles"></ckeditor>
+                                </div>
+                            </div>
                         </div>
-                        <div class="text-center pt-3">
-                            <button class="btn bg-pink">Guardar</button>
-                        </div>
+                    </div>
+                    <div *ngIf="mensajesDeError.length > 0" class="text-danger pt-3">
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-danger" *ngFor="let mensaje of mensajesDeError">{{ mensaje }}</li>
+                        </ul>
+                    </div>
+                    <div class="text-center pt-3">
+                        <button class="btn bg-pink">Guardar</button>
                     </div>
                 </form>
             </div>
